--- a/day1.html
+++ b/day1.html
@@ -93,16 +93,16 @@
                     <h1>Overview</h1>
                     <p>Today Our Tutor Fransisco Explained about Fab Acadamy and MIT Design Principles</p>
                     <h1>What We learned</h1>
-                       <p><li>What is Fab Acdamy </li>
+                       <p><ul><li>What is Fab Acdamy </li>
 <li>What is Pre Fab Acdamy</li>
 <li>Steps for Completing a Fab Project</li>
 <li>9 MIT Design Principles</li>
 <li>Do's and Dont's in Fab Acdamy"</li>
-</li></p>
+</li></ul></p>
        
                     <h1>Completed Tasks</h1>
-                       <p><li>Went Through Previous Year Fab Acdamy Achives</li> </p>
-                    <h1>Problems Faced and Solutions<h1/>
+                       <p><ul><li>Went Through Previous Year Fab Acdamy Achives</li> </ul></p>
+                    <h1>Problems Faced and Solutions</h1>
                         <p>No Problems Occured</P>
                         <h1>Pictures</h1>
 
@@ -118,19 +118,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="img/1.jpg" alt="Chania">
+      <img src="img/day1/1.jpg" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="img/2.jpg" alt="Chania">
+      <img src="img/day1/2.jpg" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="img_flower.jpg" alt="Flower">
+      <img src="img/day1/3.jpg" alt="Flower">
     </div>
 
     <div class="item">
-      <img src="img_flower2.jpg" alt="Flower">
+      <img src="img/day1/4.jpg" alt="Flower">
     </div>
   </div>
 
