--- a/day2.html
+++ b/day2.html
@@ -132,23 +132,22 @@
   <div class="carousel-inner" role="listbox">
     <div class="item active">
         
-      <img src="img/day2/d2a.png" alt="Chania">
+      <img src="img/day2/2.png" alt="Fab Screenshot">
      <div class="carousel-caption">
-            <h1>One more for good measure.</h1>
+            <h1></h1>
         </div>
     </div>
 
+   
+
     <div class="item">
-      <img src="img/day2/d2b.png" alt="Chania">
+      <img src="img/day2/3.png" alt="FAb Pic">
     </div>
 
     <div class="item">
-      <img src="img/day2/d2c.png" alt="Flower">
+      <img src="img/day2/4.png" alt="Fab Pic">
     </div>
-
-    <div class="item">
-      <img src="img/day2/d2d.png" alt="Flower">
-    </div>
+    
   </div>
 
   <!-- Left and right controls -->
