--- a/day10.html
+++ b/day10.html
@@ -118,24 +118,52 @@
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
     <li data-target="#myCarousel" data-slide-to="3"></li>
+    <li data-target="#myCarousel" data-slide-to="4"></li>
+    <li data-target="#myCarousel" data-slide-to="5"></li>
+    <li data-target="#myCarousel" data-slide-to="6"></li>
+    <li data-target="#myCarousel" data-slide-to="7"></li>
+    <li data-target="#myCarousel" data-slide-to="8"></li>
+    <li data-target="#myCarousel" data-slide-to="9"></li>
+    <li data-target="#myCarousel" data-slide-to="10"></li>
   </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="img/1.jpg" alt="Chania">
+      <img src="img/day10/1.jpg" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="img/2.jpg" alt="Chania">
+      <img src="img/day10/2.jpg" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="img_flower.jpg" alt="Flower">
+      <img src="img/day10/3.jpg" alt="Flower">
     </div>
 
+<div class="item">
+      <img src="img/day10/4.jpg" alt="Flower">
+    </div>
     <div class="item">
-      <img src="img_flower2.jpg" alt="Flower">
+      <img src="img/day10/5.jpg" alt="Flower">
+    </div>
+    <div class="item">
+      <img src="img/day10/6.jpg" alt="Flower">
+    </div>
+    <div class="item">
+      <img src="img/day10/7.jpg" alt="Flower">
+    </div>
+    <div class="item">
+      <img src="img/day10/8.jpg" alt="Flower">
+    </div>
+    <div class="item">
+      <img src="img/day10/9.jpg" alt="Flower">
+    </div>
+    
+
+    
+    <div class="item">
+      <img src="img/day10/10.jpg" alt="Flower">
     </div>
   </div>
 
