--- a/day11.html
+++ b/day11.html
@@ -116,19 +116,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="img/1.jpg" alt="Chania">
+      <img src="img/day11/1.jpg" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="img/2.jpg" alt="Chania">
+      <img src="img/day11/2.jpg" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="img_flower.jpg" alt="Flower">
+      <img src="img/day11/3.jpg" alt="Flower">
     </div>
 
     <div class="item">
-      <img src="img_flower2.jpg" alt="Flower">
+      <img src="img/day11/4.jpg" alt="Flower">
     </div>
   </div>
 
