--- a/day6.html
+++ b/day6.html
@@ -105,6 +105,7 @@
                         <p></P>
                         <h1>Pictures</h1>
 
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -112,25 +113,38 @@
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
     <li data-target="#myCarousel" data-slide-to="3"></li>
+    <li data-target="#myCarousel" data-slide-to="4"></li>
+    <li data-target="#myCarousel" data-slide-to="5"></li>
   </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="img/1.jpg" alt="Chania">
+      <img src="img/day6/1.jpg" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="img/2.jpg" alt="Chania">
+      <img src="img/day6/2.jpg" alt="Chania">
     </div>
 
-    <div class="item">
-      <img src="img_flower.jpg" alt="Flower">
+     <div class="item">
+      <img src="img/day6/3.jpg" alt="Chania">
     </div>
 
-    <div class="item">
-      <img src="img_flower2.jpg" alt="Flower">
+     <div class="item">
+      <img src="img/day6/4.jpg" alt="Chania">
     </div>
+
+     <div class="item">
+      <img src="img/day6/5.jpg" alt="Chania">
+    </div>
+
+     <div class="item">
+      <img src="img/day6/6.jpg" alt="Chania">
+    </div>
+
+
+    <
   </div>
 
   <!-- Left and right controls -->
