--- a/day7.html
+++ b/day7.html
@@ -119,19 +119,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="img/1.jpg" alt="Chania">
+      <img src="img/day7/1.jpg" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="img/2.jpg" alt="Chania">
+      <img src="img/day7/2.jpg" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="img_flower.jpg" alt="Flower">
+      <img src="img/day7/3.jpg" alt="Flower">
     </div>
 
     <div class="item">
-      <img src="img_flower2.jpg" alt="Flower">
+      <img src="img/day7/4.jpg" alt="Flower">
     </div>
   </div>
 
