--- a/day8.html
+++ b/day8.html
@@ -125,19 +125,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="img/1.jpg" alt="Chania">
+      <img src="img/day8/1.png" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="img/2.jpg" alt="Chania">
+      <img src="img/day8/2.jpg" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="img_flower.jpg" alt="Flower">
+      <img src="img/day8/3.jpg" alt="Flower">
     </div>
 
     <div class="item">
-      <img src="img_flower2.jpg" alt="Flower">
+      <img src="img/day8/4.jpg" alt="Flower">
     </div>
   </div>
 
