--- a/day10.html
+++ b/day10.html
@@ -109,7 +109,15 @@
                        <li>Soldered FAB ISP</li> </ul></p>
                     <h1>Problems Faced and Solutions</h1>
                         <p>Problem:FAB ISP not detetecting by avrdude software<br>Solution:We found that some continuity issues with RST Pin we desoldered the connection.</p>
-                        <h1>Pictures</h1>
+<h1>Files and Links </h1>
+<p>
+
+<a href ="">Fab ISP Traces  </a>
+<a href ="">Inner  </a>
+<a href ="">Board</a>
+
+</p>                        
+<h1>Pictures</h1>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
