--- a/day2.html
+++ b/day2.html
@@ -118,7 +118,18 @@
 <li>Sublime Text Editor</ol></p>
                     <h1>Problems Faced and Solutions<h1/></h1>
 <p>Problem : Installation error when installing antomony <br>Solution: Cleaned whole antimony files and re installed 
-                        <h1>Pictures</h1>
+<h1>Files and Links </h1>
+<p>
+
+<a href ="">Fab Modules</a>
+<a href ="">Kokopelli retro download link </a>
+<a href ="">Antimony </a>
+<a href ="">Arduino.cc </a>
+<a href ="">Cura 3D Printer Software </a>
+<a href ="">Sublime My Favourite Text Editor</a>
+</p>
+                    
+<h1>Pictures</h1>
                         <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
