--- a/day3.html
+++ b/day3.html
@@ -71,7 +71,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/post-bg.jpg')">
+    <header class="intro-header" style="background-image: url('img/post-bgh.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -112,7 +112,15 @@
 <li>Confugured and Published a HTML page using Github Pages</li>
 
                         <h1><h1/>
-                          
+                          <h1>Files and Links </h1>
+<p>
+
+<a href ="">Fablabs.io</a>
+<a href ="">git.fabcloud.io </a>
+<a href ="">Github</a>
+<a href ="">Sketchfab</a>
+<a href ="">How to create hithub pages tutorial </a>
+</p>
                         <h1>Pictures</h1>
                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
