--- a/day5.html
+++ b/day5.html
@@ -104,7 +104,13 @@
                     <h1>Problems Faced and Solutions</h1>
                         <p>Problem:First Sticker was not usable because of low DPI
                             <br>Solution:DPI Changed into 500 then its fine</p>
-                        <h1>Pictures</h1>
+<h1>Files and Links </h1>
+<p>
+
+<a href ="">Sticker .png File</a>
+
+</p>                        
+<h1>Pictures</h1>
                    
                     <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
