--- a/day6.html
+++ b/day6.html
@@ -103,6 +103,14 @@
                        <p><li>Created a box using laser cutter</li> </p>
                     <h1>Problems Faced and Solutions<h1/>
                         <p></P>
+<h1>Files and Links </h1>
+<p>
+
+<a href ="">Online Box Maker Tool</a>
+<a href ="">Laser Cutting Box .pdf</a>
+
+
+</p>
                         <h1>Pictures</h1>
 
 
