--- a/day7.html
+++ b/day7.html
@@ -105,6 +105,14 @@
 <li>Sucessfully 3D Printed Switch Guard</li> </p>
                     <h1>Problems Faced and Solutions</h1>
                         <p>No Problems Occured</P>
+<h1>Files and Links </h1>
+<p>
+
+<a href ="">Switch Guard  Antimony .Sb </a>
+<a href ="">Switch guard .stl </a>
+<a href ="">G Code</a>
+
+</p>
                         <h1>Pictures</h1>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
