--- a/day8.html
+++ b/day8.html
@@ -111,6 +111,14 @@
 <li>Created mold using modella and wax block</li> </ul></p>
                     <h1>Problems Faced and Solutions</h1>
                         <p>No Problems Occured</P>
+<h1>Files and Links </h1>
+<p>
+
+<a href ="">Pen Holder  Antimony .Sb </a>
+<a href ="">Heightmap Image for Modella </a>
+
+
+</p>
                         <h1>Pictures</h1>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
