--- a/index.html
+++ b/index.html
@@ -52,23 +52,9 @@
                 <ul class="nav navbar-nav navbar-right">
                     
                     <li>
-                        <a href="week1.html">Week 1</a>
+                        <a href="project.html">Project</a>
                     </li>
-                    <li>
-                        <a href="week1.html">Week 2</a>
-                    </li>
- <li>
-                        <a href="week2.html">Week 3</a>
-                    </li>
- <li>
-                        <a href="week3.html">Week 4</a>
-                    </li>
- <li>
-                        <a href="week4.html">Main Project</a>
-                    </li>
-                    <li>
-                        <a href="contactme.html">Contact Me</a>
-                    </li>
+                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -78,7 +64,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/home-bg.jpg')">
+    <header class="intro-header" style="background-image: url('img/project/p1.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
