--- a/day2.html
+++ b/day2.html
@@ -51,17 +51,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="project.html">project</a>
                     </li>
-                    <li>
-                        <a href="about.html">Main Project</a>
-                    </li>
-                    <li>
-                        <a href="post.html">Sample Post</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
+                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -121,12 +113,11 @@
 <h1>Files and Links </h1>
 <p>
 
-<a href ="">Fab Modules</a>
-<a href ="">Kokopelli retro download link </a>
-<a href ="">Antimony </a>
-<a href ="">Arduino.cc </a>
-<a href ="">Cura 3D Printer Software </a>
-<a href ="">Sublime My Favourite Text Editor</a>
+<a href ="http://fabmodules.org/">Fab Modules</a>
+<a href ="https://drive.google.com/open?id=0BzRX0YoH0d4OUHZhSVozc0kxOGM">Kokopelli retro download link </a>
+<a href ="http://open3dge.com/antimony/">Antimony </a>
+<a href ="http://arduino.cc">Arduino.cc </a>
+
 </p>
                     
 <h1>Pictures</h1>
