--- a/day10.html
+++ b/day10.html
@@ -51,17 +51,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="project.html">Project</a>
                     </li>
-                    <li>
-                        <a href="about.html">Main Project</a>
-                    </li>
-                    <li>
-                        <a href="post.html">Sample Post</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
+                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -112,9 +104,9 @@
 <h1>Files and Links </h1>
 <p>
 
-<a href ="">Fab ISP Traces  </a>
-<a href ="">Inner  </a>
-<a href ="">Board</a>
+<a href ="http://academy.cba.mit.edu/classes/embedded_programming/hello.ISP.44.traces.png">Fab ISP Traces  </a>
+<a href ="http://academy.cba.mit.edu/classes/embedded_programming/hello.ISP.44.interior.png">Interior  </a>
+<a href ="http://academy.cba.mit.edu/classes/embedded_programming/hello.ISP.44.res.png">Board</a>
 
 </p>                        
 <h1>Pictures</h1>
