--- a/day11.html
+++ b/day11.html
@@ -51,17 +51,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="project.html">Project</a>
                     </li>
-                    <li>
-                        <a href="about.html">Main Project</a>
-                    </li>
-                    <li>
-                        <a href="post.html">Sample Post</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
+                   
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -105,8 +97,8 @@
 <h1>Files and Links </h1>
 <p>
 
-<a href ="">Kokopille Retro Zip </a>
-<a href ="">Arduino Code</a>
+<a href ="https://drive.google.com/file/d/0BzRX0YoH0d4OUHZhSVozc0kxOGM/view?usp=sharing">Kokopille Retro Zip </a>
+<a href ="academy.cba.mit.edu/classes/embedded_programming/hello.ISP.44.res.cad">Fab ISP .cad file</a>
 
 
 </p>
