--- a/day7.html
+++ b/day7.html
@@ -51,17 +51,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html">Project</a>
                     </li>
-                    <li>
-                        <a href="about.html">Main Project</a>
-                    </li>
-                    <li>
-                        <a href="post.html">Sample Post</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
+                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -103,8 +95,7 @@
                     <h1>Completed Tasks</h1>
                        <p><li>Designed a guard for wall switches to prevent accidental switch off</li>
 <li>Sucessfully 3D Printed Switch Guard</li> </p>
-                    <h1>Problems Faced and Solutions</h1>
-                        <p>No Problems Occured</P>
+                    
 <h1>Files and Links </h1>
 <p>
 
