--- a/day8.html
+++ b/day8.html
@@ -51,17 +51,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="project.html">Project</a>
                     </li>
-                    <li>
-                        <a href="about.html">Main Project</a>
-                    </li>
-                    <li>
-                        <a href="post.html">Sample Post</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
+                   
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -109,8 +101,7 @@
                     <h1>Completed Tasks</h1>
                        <p><ul><li>Created a 3D Mold for a Pen holder using antimony</li>
 <li>Created mold using modella and wax block</li> </ul></p>
-                    <h1>Problems Faced and Solutions</h1>
-                        <p>No Problems Occured</P>
+                    
 <h1>Files and Links </h1>
 <p>
 
