--- a/day3.html
+++ b/day3.html
@@ -51,17 +51,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="project.html">Project</a>
                     </li>
-                    <li>
-                        <a href="about.html">Main Project</a>
-                    </li>
-                    <li>
-                        <a href="post.html">Sample Post</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
+                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -71,7 +63,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/post-bgh.jpg')">
+    <header class="intro-header" style="background-image: url('img/post-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -115,11 +107,11 @@
                           <h1>Files and Links </h1>
 <p>
 
-<a href ="">Fablabs.io</a>
-<a href ="">git.fabcloud.io </a>
-<a href ="">Github</a>
-<a href ="">Sketchfab</a>
-<a href ="">How to create hithub pages tutorial </a>
+<a href ="http://fablabs.io">Fablabs.io</a>
+<a href ="git.fabcloud.io">git.fabcloud.io </a>
+<a href ="https://github.com/">Github</a>
+<a href ="https://sketchfab.com/">Sketchfab</a>
+<a href ="https://pages.github.com/">How to create hithub pages tutorial </a>
 </p>
                         <h1>Pictures</h1>
                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
